[package]
name = "blog"
version = "0.1.0"
authors = ["max mindlin <maxmindlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "blog"
path = "api/src/lib.rs"

[[bin]]
name = "main"
path = "api/src/bin/main.rs"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jwt = "0.4.0"
rust-crypto = "0.2"

diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
r2d2 = "*"
r2d2-diesel = "*"

dotenv = "0.10"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
